# credit-risk-prediction

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/reports/: lending_club_accepted_col_selection.xlsx  lending_club_accepted_dictionary.csv  lending_club_accepted_raw_data_dictionary.csv
notebooks/: 01_eda.ipynb
src/credit_risk/data/: contracts.py  registry.py  split.py
src/credit_risk/data_sources/: lending_club_data_source.py
