[project]
name = "credit-risk-prediction-system"
description = "Credit risk prediction system"
authors = [{ name = "Pragyan Shrestha", email = "stha.pragyan.17@gmail.com" }]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy", "pandas"]

[dependency-groups]
dev = ["jupyter"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
